[tool.poetry]
name = "pytest-proj"
version = "0.1.0"
description = ""
authors = ["Oleg <panasenko23o@mail.ru>"]
readme = "README.md"
packages = [{include = "pytest_proj"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
